--- a/JavaScript-Parte2-Lenguaje-de-la-web-aula1/1747-JavaScript-parte2-aula1/index.html
+++ b/JavaScript-Parte2-Lenguaje-de-la-web-aula1/1747-JavaScript-parte2-aula1/index.html
@@ -86,7 +86,12 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<span id="error-ajax" class="invisible">
+					Error al buscar los pacientes
+				</span>
+				<button id="buscar-paciente" class="boton bto-principal">
+					Buscar Pacientes
+				</button>
 			</section>
 		</main>
 
@@ -120,6 +125,7 @@
 		<script src="js/form.js"></script>	
 		<script src="js/eliminar-paciente.js"></script>
 		<script src="js/filtrar.js"></script>
+		<script src="js/buscar-pacientes.js"></script>
 
 	</body>
 
